<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuessWord</string>
    <string name="BeginBtn">开始游戏</string>
    <string name="UserNameTV">用户名：</string>
    <string name="UserNameHint">请输入用户名</string>
    <string name="TopPrompt">根据下面四个提示，猜出相关联的词语</string>
    <string name="PromptBtn">下一提示</string>
    <string name="PromptText">提示：</string>
    <string name="PromptTitle1">、1</string>
    <string name="PromptTitle2">、2</string>
    <string name="PromptTitle3">、3</string>
    <string name="PromptTitle4">、4</string>
    
    <string name="DefaultPromptColor">#676767</string>

</resources>
