<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="10dp"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/TopPrompt" />

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:text="1/10" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvNumber"
        android:layout_centerHorizontal="true"
        android:text="得分：500" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/tvNumber"
        android:layout_below="@+id/tvNumber"
        android:layout_marginTop="15dp"
        android:background="#000" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PromptText" />

            <TextView
                android:id="@+id/tvPromptTitle1"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginLeft="8dp"
                android:text="@string/PromptTitle1" />

            <TextView
                android:id="@+id/tvPrompt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvPromptTitle2"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginLeft="50dp"
                android:text="@string/PromptTitle2" />

            <TextView
                android:id="@+id/tvPrompt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvPromptTitle3"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginLeft="50dp"
                android:text="@string/PromptTitle3" />

            <TextView
                android:id="@+id/tvPrompt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvPromptTitle4"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginLeft="50dp"
                android:text="@string/PromptTitle4" />

            <TextView
                android:id="@+id/tvPrompt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="15dp"
        android:background="#000" />

    <LinearLayout
        android:id="@+id/AnswerTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <GridView
            android:id="@+id/InputGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:horizontalSpacing="3dp"
            android:stretchMode="columnWidth">
        </GridView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AnswerTable"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <GridView
            android:id="@+id/OptionGrid"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:horizontalSpacing="2dp"
            android:numColumns="8"
            android:stretchMode="columnWidth"
            android:verticalSpacing="2dp" >
        </GridView>
    </LinearLayout>

</RelativeLayout>